<resources>
    <string name="app_name">CryptoAppFinalProject</string>
    <string name="log_in_register">Log In/Register</string>
    <string name="converter">Converter</string>
    <string name="settings">Settings</string>
    <string name="user_info">User Info</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_address">Email address...</string>
    <string name="name">Name</string>
    <string name="log_in">log in</string>
    <string name="surname">Surname</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="repeat_your_password">Repeat password...</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter password...</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="enter_your_email_address">enter your email address</string>

    <string-array name="spinner_items">
        <item>Home</item>
        <item>News</item>
        <item>Favorites</item>
        <item>Learn</item>

    </string-array>

    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="favorites">Favorites</string>
    <string name="learn">Learn</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="amount">Amount</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="coins">Coins</string>
    <string name="exchanges">Exchanges</string>
    <string name="search">Search a coin</string>
    <string name="sort_by_rank">Sort By Rank</string>
    <string name="login_to_track_your_favourite_coins_exchanges">Login To Track Your Favourite Coins/Exchanges!</string>
    <string name="cryptoassets">CryptoAssets</string>
    <string name="register_here">Register here</string>
    <string name="app">App</string>
    <string name="choose_language">Choose Language</string>
    <string name="day_mode">Day Mode</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="enter_your_old_password">Enter Your Old Password</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="video_one">How does a blockchain work - Simply Explained</string>
    <string name="video_two">Smart contracts - Simply Explained</string>
    <string name="video_three">Proof-of-Stake (vs proof-of-work)</string>
    <string name="video_four">How the blockchain is changing money and business</string>
    <string name="video_five">How the blockchain will radically transform the economy</string>
    <string name="video_six">The future will be decentralized</string>
    <string name="video_sevem">Best Cryptocurrency Exchanges of 2022</string>
    <string name="video_eight">How to Invest in Cryptocurrency</string>




    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sure_to_add">Are You Sure You Want To Add</string>
    <string name="sure_to_remove">Are You Sure You Want To Remove</string>

    <string name="to_cryptos">To Favorite Cryptos</string>
    <string name="from_cryptos">From Favorite Cryptos</string>
    <string name="been_added">Has Been Added To Favorites</string>
    <string name="already_added">Already Added To Favorites</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="old_pass_incorrect">Old Password is Incorrect</string>
    <string name="pass_updated">Congrats,Password Has Been Updated</string>
    <string name="old_email_incorrect">Old Email is Incorrect</string>
    <string name="email_update">Congrats,Email Has Been Updated</string>
    <string name="enter_old_email">Enter Your Old Email</string>
    <string name="picture_change_success">Your Profile Picture Has Been Changed Successfully</string>
    <string name="you_are_logged_in">you are logged in</string>
    <string name="already_logged_in">You Are Already Logged In</string>
    <string name="invalid_email">Please enter the valid email</string>
    <string name="fill_every_field">Fill out all fields</string>
    <string name="pass_dont_match">Passwords do not match</string>
    <string name="havent_registered">you haven\'t registered</string>
    <string name="you_are_registered">you are registered</string>
    <string name="you_signed_out">You Signed Out</string>
    <string name="already_signed_out">You are already signed out</string>
    <string name="support">Support</string>
    <string name="type_a_message">Type a message</string>
    <string name="learn_about_crypto">Learn About Crypto</string>
    <string name="message_sent">message has been sent</string>
    <string name="cant_sent_msg">can\'t send a dm</string>
    <string name="go_to_web">this action will redirect you to web, do you want to proceed?</string>
    <string name="invalid_password_auth">Invalid Credentials</string>
    <string name="lang_already_set">\"That language is already set \"</string>
    <string name="connection_restored">Connection Restored</string>
    <string name="no_internet">No Internet Connection</string>

    <string-array name="CryptoCurrencies">
        <item>BTC</item>
        <item>ETH</item>
        <item>DOGE</item>
        <item>LTC</item>
        <item>USDT</item>
        <item>USDC</item>
        <item>XRP</item>
        <item>BUSD</item>
        <item>SOL</item>
        <item>SHIB</item>
        <item>XLM</item>
        <item>XMR</item>

    </string-array>


    <string-array name="FiatCurrencies">
        <item>USD</item>
        <item>EUR</item>
        <item>GEL</item>
        <item>GBP</item>
    </string-array>

</resources>