<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:id="@+id/userProfileDialog"
    android:layout_gravity="center"
    android:theme="@style/CustomCardStyle"

    >


    <EditText
        android:id="@+id/etUserInfoConfirm"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_old_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUserInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:hint="@string/enter_your_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etUserInfoConfirm" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUserInfoSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/btnUserInfoCancel"
        app:layout_constraintTop_toBottomOf="@+id/etUserInfo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUserInfoCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>