<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_screen_background"
    tools:context=".ui.login.LoginFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person_icon"
        android:drawablePadding="10dp"
        android:hint="@string/name"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:paddingStart="11dp"
        android:paddingEnd="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSurname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/custom_person_icon"
        android:background="@drawable/custom_input"
        android:drawablePadding="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:hint="@string/surname"
        android:textColorHint="@color/grey"
        android:paddingStart="11dp"
        android:paddingEnd="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:hint="@string/enter_your_email_address"
        android:textColorHint="@color/grey"
        android:paddingStart="11dp"
        android:paddingEnd="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        app:startIconDrawable="@drawable/custom_password_icon"
        app:startIconTint="@color/grey"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/enter_password"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawablePadding="10dp"
            android:backgroundTint="@android:color/transparent"
            android:background="@null"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRepeatPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:autofillHints="password"
        android:background="@drawable/custom_input"
        app:startIconDrawable="@drawable/custom_password_icon"
        app:startIconTint="@color/grey"
        app:boxBackgroundColor="@null"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@null"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:hint="@string/repeat_your_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/login"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="13dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRepeatPass" />




</androidx.constraintlayout.widget.ConstraintLayout>