<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.converter.ConverterFragment">

    <ImageView
        android:id="@+id/ivBackConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlChooseCrypto"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:hint="@string/from"
        android:minEms="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/tvChooseCrypto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:dropDownHeight="200dp"
            android:textAppearance="@style/CustomTitleSettings"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlFiatCurrency"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/to"
        android:minEms="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tlChooseCrypto"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/tvFiatCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownHeight="200dp"
            android:inputType="none"
            android:textAppearance="@style/CustomTitleSettings"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAmount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/amount"
        android:textSize="15sp"
        android:inputType="numberDecimal"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:textAppearance="@style/CustomTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlChooseCrypto" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConvert"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/login"
        android:fontFamily="monospace"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="13dp"
        android:text="@string/convert"
        android:textAllCaps="false"
        android:textAppearance="@style/CustomTitleSettings"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAmount"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:bufferType="editable"
            android:textAlignment="center"
            android:textAppearance="@style/CustomTitleSettings"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConvert" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrencySign"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:bufferType="editable"
            android:textAlignment="center"
            android:textAppearance="@style/CustomTitleSettings"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvResult"
            app:layout_constraintTop_toBottomOf="@+id/btnConvert" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/rvConverter"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.495"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tvResult"-->
    <!--        app:layout_constraintVertical_bias="1.0"-->
    <!--        app:spanCount="3"-->
    <!--        tools:itemCount="12"-->
    <!--        tools:listitem="@layout/single_numeric_button" />-->



</androidx.constraintlayout.widget.ConstraintLayout>